<resources>
    <string name="app_name">Reminderer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello">Hello %1$s !</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remembeme">Remember me</string>
    <string name="login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="new_account"><u>New account</u></string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="no_items">No reminders yet :(</string>
    <string name="wrong_password">Wrong username or password</string>
    <string name="create">Create</string>
    <string name="message">Message</string>
    <string name="save">Save</string>
    <string name="reminder_not_valid">Reminder not valid!</string>
    <string name="reminder_removed">Reminder removed</string>
    <string name="undo">UNDO</string>
    <string name="remind_me">Remind me</string>
    <string name="channel_name">RemindererNtfChannel</string>
    <string name="notification_title">Remember</string>
    <string name="delete">DELETE</string>
    <string name="title_activity_location">Map</string>
    <string name="action_location">Set location</string>
</resources>